# OptimisationCombinatoire

./: CMakeLists.txt  README.md
python/: button.py  main.py
run/: NN1_ConnexeGraphSize_Best_Weighted.txt  NN1_Degree_Best_Weighted.txt  NN2_ConnexeGraphSize_Best.txt  NN2_ConnexeGraphSize_Best_Weighted.txt  NN2_ConnexeGraphSize_Worst.txt  NN2_ConnexeGraphSize_Worst_Weighted.txt  NN2_Degree_Best.txt  NN2_Degree_Best_Weighted.txt  NN2_Degree_First.txt  NN2_Degree_First_Weighted.txt  NN2_Degree_Worst.txt  NN2_Degree_Worst_Weighted.txt  NN3_ConnexeGraphSize_Best.txt  NN3_ConnexeGraphSize_Best_Weighted.txt  NN3_ConnexeGraphSize_First_Weighted.txt  NN3_ConnexeGraphSize_Worst.txt  NN3_ConnexeGraphSize_Worst_Weighted.txt  NN3_Degree_Best.txt  NN3_Degree_Best_Weighted.txt  NN3_Degree_First.txt  NN3_Degree_First_Weighted.txt  NN3_Degree_Worst.txt  NN3_Degree_Worst_Weighted.txt  NN4_ConnexeGraphSize_Worst.txt  NN4_ConnexeGraphSize_Worst_Weighted.txt  NN4_Degree_Best.txt  NN4_Degree_First_Weighted.txt  NN4_Degree_Worst_Weighted.txt  gradient.txt  gradient_Weighted.txt
src/: main.cpp  main_exemple.cpp  main_graph_generation.cpp  path.hpp  runAllGraphs.cpp  runAllGraphs.hpp  utils.cpp  utils.hpp
src/criteria/: connexeGraphSize.cpp  connexeGraphSize.hpp  criteria.hpp  degree.cpp  degree.hpp
src/gradient/: gradient.cpp  gradient.hpp
src/graphs/: adjmat.hpp  graph.cpp  graphAdjMatrix.hpp  graphDefs.hpp  graphListAdj.cpp  graphListAdj.hpp  weightedgraphDefs.cpp  weightedgraphDefs.hpp
src/hill_climb/: hill_climb.cpp  hill_climb.hpp
src/neighborhood/: n1.cpp  n1.hpp  n2.cpp  (+5 more)
